# TestCpp

./: azure-pipelines.yml  template.yml
CPPTest/: CMakeLists.txt  CPPTest.cpp  CPPTest.h
